--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.11
 Django==4.0.1
+idna==3.3
 Pillow==9.0.0
+requests==2.27.1
 sqlparse==0.4.2
+urllib3==1.26.8
