--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.0.1
 django-admin-thumbnails==0.2.6
 idna==3.3
 Pillow==9.0.0
+python-decouple==3.6
 requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
