--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.11
 Django==4.0.1
+django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.6
 idna==3.3
 Pillow==9.0.0
