WIP AWS deployment

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,8 @@ target/
 # IPython
 profile_default/
 ipython_config.py
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
