--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.4.1
+boto3==1.17.36
+botocore==1.20.36
 certifi==2021.10.8
 charset-normalizer==2.0.11
 Django==4.0.1
@@ -6,10 +8,16 @@ django-admin-honeypot-updated-2021==1.2.0
 django-admin-thumbnails==0.2.6
 django-ipware==4.0.2
 django-session-timeout==0.1.0
+django-storages==1.11.1
 idna==3.3
+jmespath==0.10.0
 Pillow==9.0.0
+psycopg2-binary==2.8.6
+python-dateutil==2.8.1
 python-decouple==3.6
+pytz==2020.1
 requests==2.27.1
+s3transfer==0.3.6
 six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.8
